# Matterhorn

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
matterhorn/cli/: main.py  utils.py
matterhorn/cluster/: _base.py
matterhorn/cluster/slurm/: controller.py  job.py
matterhorn/core/: application.py  controller.py  ui.py
matterhorn/core/filesystem/: __init__.py  factory.py  localfs.py  pyfsbased.py  sshfs.py
matterhorn/core/job/: batch_job.py  job_status.py  job_watcher.py
matterhorn/core/ssh/: sshexecutor.py
matterhorn/core/utils/: launch_options.py
matterhorn/core/workflow/: __init__.py  factory.py  stages.py  workflow.py
meta/: requirements.txt
rcc/cli/: main.py  utils.py
rcc/cluster/: _base.py
rcc/cluster/slurm/: controller.py  job.py
rcc/core/: application.py  controller.py  ui.py
rcc/core/filesystem/: factory.py  progressive.py  sshfs.py
rcc/core/job/: __init__.py  batch_job.py  job_watcher.py  watcher_thread.py
rcc/core/ssh/: __init__.py  sshexecutor.py
rcc/core/utils/: __init__.py  errors.py  launch_options.py
rcc/core/workflow/: factory.py  stages.py  workflow.py
