[project]
name = "rcc"
version = "0.0.1"
description = "HPC Management Tool"
authors = [{ name = "Xiaozhe Yao", email = "askxzyao@gmail.com" }]
dependencies = [
  "paramiko>=2.10.4",
  "fs>=2.4.16",
  "fs-sshfs>=1.0.1",
  "rich>=10.1.0",
  "PyYAML>=5.4.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.scripts]
rcc = "rcc.cli.main:app"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
markers = ["integration", "acceptance"]

[tool.pdm.scripts]
fmt = "black ."
doc = "sphinx-build -b html docs/source docs/build/html"
test = "pytest test -m 'not acceptance and not integration' -vv"
test-integration = "pytest test -m 'integration' -vv"
typecheck = "mypy --strict rcc"
lint = "ruff rcc"

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=6.2.3",
  "pytest-cov>=2.11.1",
  "pytest-timeout>=1.4.2",
  "nox>=2022.11.21",
  "testcontainers>=3.7.1",
]
format = ["black>=23.1.0"]
typecheck = ["mypy>=1.0.0", "types-paramiko>=3.0.0.3", "types-PyYAML>=6.0.12.6"]
doc = ["sphinx>=5.3.0", "myst-parser>=0.18.1", "furo>=2022.12.7"]
lint = ["ruff>=0.0.247"]

[tool.ruff]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 10